# HirokiHamaguchi.github.io

./: .gitignore  AGENTS.md  Gemfile  README.md  TODO.md  _config.yml  package.json  pyproject.toml  requirements.txt  sitemap.xml  talkmap.ipynb
_data/: navigation.yml  ui-text.yml
_diary/: 2022-08_月記.html  2023-02_月記.html  2023-03_月記.html  2023-04_月記.html  2023-05_月記.html  2023-06_月記.html  2023-07_月記.html  2023-08_月記.html  2023-09_月記.html  2023-10_月記.html  2023-11_月記.html  2023-12_月記.html  2024-03_月記.html  2024-06_月記.html  2024-08_月記.html  2024-09_月記.html  2024-10_月記.html  2024-11_月記.html  2024-12_月記.html  2025-01_月記.html  2025-02_月記.html  2025-03_月記.html  2025-04_月記.html  2025-05_月記.html  2025-06_月記.html  2025-07_月記.html  2025-08_月記.html  2025-09_月記.html  2025-10_月記.html  2025-11_月記.html  2025-12_月記.html  2026-01_月記.html  2026-02_月記.html  2026-03_月記.html  ICPC2024_国内予選_(HHIJKT).html  タイ旅行.html  卒論記.html  台湾卒業旅行.html  名古屋旅行.html  学振DC1の申請について[2026年度].html  (+5 more)
_includes/: archive-single.html  author-profile.html  footer.html  seo.html  sidebar.html
_layouts/: archive.html  default.html  single.html
_pages/: about.md  blog.html  blogs.html  cv.md  diary.html  monthly.html  program.html  programs.html  publications.html  sitemap.html  talkmap.html  talks.html  travel.html
_posts/: 2021-02-25-2021-02-25.md  2021-02-25-BlenderとPythonでポテトチップスをモデリングする.md  2021-03-22-2021-03-22.md  2021-03-22-BlenderとPythonとUnityで巨大な立体迷路を作成する.md  2021-04-23-2021-04-23.md  2021-04-23-AHC001で奇想の浮世絵師「歌川国芳」の絵を再現する.md  2021-07-08-2021-07-08.md  2021-07-08-CADDi2019のビジュアライザを作りました。.md  (+42 more)
(+125 files in other folders)
